Fix the ENABLE(WEBASSEMBLY) build https://bugs.webkit.org/show_bug.cgi?id=157312

Patch by Xan Lopez <xlopez@igalia.com> on 2016-05-03
Reviewed by Darin Adler.

* runtime/Executable.cpp:
(JSC::WebAssemblyExecutable::WebAssemblyExecutable):
* wasm/WASMFunctionCompiler.h:
(JSC::WASMFunctionCompiler::convertValueToDouble):

Canonical link: https://commits.webkit.org/175432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200399 268f45cc-cd09-0410-ab3c-d52691b4dbfc